# wavet

./: CMakeLists.txt  LICENSE.txt  README.md  config.h.in  config.hpp.in
assets/R74n/: README.md
src/: animation.cpp  animation.hpp  arguments.cpp  arguments.hpp  image.cpp  image.hpp  main.cpp  terminal.cpp  terminal.hpp
